--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "iterm2-config",
   "version": "1.0.0",
   "main": "index.js",
-  "author": "李翔",
+  "author": "lx70770",
   "license": "MIT"
 }
